<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <ImageButton
        android:id="@+id/imb_close_add_story"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/ic_baseline_close_24"
        android:contentDescription="@string/close_page" />

    <Button
        android:id="@+id/btn_post_story"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:backgroundTint="@color/sea_blue"
        android:background="@drawable/blue_oval_shape"
        android:contentDescription="@string/post_story"
        android:text="@string/post"
        android:textColor="@color/white" />

</RelativeLayout>