<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".ui.views.user.LoginActivity">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:text="@string/login_your_account"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="2dp"
        android:alpha="0"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/ly_login_email"
        app:passwordToggleEnabled="true">

        <com.andyra.storyapp.ui.customview.CustomEditPassword
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:alpha="0"
        android:backgroundTint="@color/blue"
        android:contentDescription="@string/login_button"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/ly_login_password" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ly_login_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login_login">

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/teal_700"
            app:layout_constraintBottom_toBottomOf="@id/tv_login_or"
            app:layout_constraintEnd_toStartOf="@id/tv_login_or"
            app:layout_constraintTop_toTopOf="@id/tv_login_or" />

        <TextView
            android:id="@+id/tv_login_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:text="@string/or"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/teal_700"
            app:layout_constraintBottom_toBottomOf="@id/tv_login_or"
            app:layout_constraintStart_toEndOf="@id/tv_login_or"
            app:layout_constraintTop_toTopOf="@id/tv_login_or" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_login_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:alpha="0"
        android:backgroundTint="@color/green"
        android:contentDescription="@string/register_button"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/ly_login_or" />
</androidx.constraintlayout.widget.ConstraintLayout>