<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".ui.views.user.RegisterActivity">

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:text="@string/create_your_account"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ly_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@id/tv_register_title">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_register_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:hint="@string/first_name"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@id/ly_register_last_name"
            app:layout_constraintHorizontal_weight="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_register_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_register_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:hint="@string/last_name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="5"
            app:layout_constraintStart_toEndOf="@id/ly_register_first_name"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_register_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:alpha="0"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/ly_register_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:alpha="0"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/ly_register_email"
        app:passwordToggleEnabled="true">

        <com.andyra.storyapp.ui.customview.CustomEditPassword
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:alpha="0"
        android:backgroundTint="@color/green"
        android:contentDescription="@string/register_button"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/ly_register_password" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ly_register_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register_register">

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/teal_700"
            app:layout_constraintBottom_toBottomOf="@id/tv_register_or"
            app:layout_constraintEnd_toStartOf="@id/tv_register_or"
            app:layout_constraintTop_toTopOf="@id/tv_register_or" />

        <TextView
            android:id="@+id/tv_register_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:text="@string/or"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/teal_700"
            app:layout_constraintBottom_toBottomOf="@id/tv_register_or"
            app:layout_constraintStart_toEndOf="@id/tv_register_or"
            app:layout_constraintTop_toTopOf="@id/tv_register_or" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_register_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:alpha="0"
        android:backgroundTint="@color/blue"
        android:contentDescription="@string/login_page"
        android:text="@string/have_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/ly_register_or" />
</androidx.constraintlayout.widget.ConstraintLayout>